Docs sidebar menu overflow fix for Safari

--- a/src/main/resources/_sass/light-style/_light-docs.scss
+++ b/src/main/resources/_sass/light-style/_light-docs.scss
@@ -340,6 +340,7 @@
       #sidebar-wrapper {
         left: 0;
         width: 100%;
+        overflow-y: auto;
 
         .sidebar-toggle {
           display: block;
@@ -351,6 +352,11 @@
             transform: rotate(-180deg);
           }
         }
+      }
+
+      #page-content-wrapper {
+        height: 100vh;
+        overflow: hidden;
       }
     }
   }
